# redeemcore

./: .gitignore  .pep8  CONTRIBUTING.md  LICENSE  README.md  RedemptionCore.code-workspace  actions.json  casey_actions.json  defaults-actions  defaults-settings  pyproject.toml  settings.ini  start.sh
RedemptionCore/: __main__.py  internal.py  irc.py  log.py  redeem.py  settings.py  steps.py  util.py
json-frontend-react/: .gitignore  package-lock.json  package.json
json-frontend-react/public/: index.html  manifest.json
json-frontend-react/src/: App.css  App.tsx  schema.json  uischema.json
