[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = true

[project]
name = "RedemptionCore"
version = "1.3.0"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    'pigpio>=1.78',
    'gpiozero>=2.0',
    'python-decouple>=3.8',
    'emoji>=2.8.0'
]
