[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = true

[project]
name = "RedemptionCore"
version = "1.4.2"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    'pigpio>=1.78',
    'gpiozero>=2.0',
    'python-decouple>=3.8',
]
